--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -24,5 +24,6 @@ spec:
       containers:
       - name: app
         image: go-vault-app
+        imagePullPolicy: Never
         ports:
         - containerPort: 8080
